fix: text overflow

--- a/pages/do-something/msa-dues/page.module.css
+++ b/pages/do-something/msa-dues/page.module.css
@@ -7,7 +7,7 @@
 .banner {
   height: 70vh;
   background-color: #001a4a;
-display: flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
@@ -26,4 +26,10 @@ display: flex;
   font-weight: 400;
   width: 40%;
   letter-spacing: 1px;
+}
+
+@media screen and (max-width: 768px) {
+  .banner p {
+    width: 80%;
+  }
 }
